<resources>
    <string name="app_name">Projekt Android</string>
    <string name="homepage">Strona główna</string>
    <string name="functionality1">Funkcjonalność 1</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="grade_list">Liczba ocen</string>
    <string name="grade">Oceny</string>
    <string name="done">Gotowe</string>
    <string-array name="grades">
        <item></item>
        <item>2</item>
        <item>3</item>
        <item>3.5</item>
        <item>4</item>
        <item>4.5</item>
        <item>5</item>
    </string-array>
    <string name="functionality2">Funkcjonalność 2</string>
    <string name="empty_text">Brak rekordów</string>
    <string name="menu_header_text">Wybrano: </string>
    <string name="deleteSmartphones_text">Usuń</string>
    <string name="brand">Marka</string>
    <string name="model">Model</string>
    <string name="fuel_type">Rodzaj paliwa</string>
    <string name="www">Strona www</string>
    <string name="button_www">WWW</string>
    <string name="button_cancel">Anuluj</string>
    <string name="button_save">Zapisz</string>
    <string name="functionality3">Funkcjonalność 3</string>

    <string name="functionality4">Funkcjonalność 4</string>
    <string name="TextViewURLText">URL</string>
    <string name="editTextURLText">URL pliku</string>
    <string name="buttonGetInfoText">Pobierz dane pliku</string>
    <string name="textViewFileSizeLabelText">Rozmiar pliku</string>
    <string name="textViewFileTypeLabelText">Typ pliku</string>
    <string name="buttonGetFileText">Pobierz</string>
    <string name="textViewDownloadedLabelText">Pobrano</string>
</resources>